# proj

./: .gitignore  main.py  mlflow_guide.md  pyproject.toml  uv_guide.md
mlops/: train.py  trainer.py
mlops/gpt/: build_model.py  run.sh  train.py  train_args.py
mlops/utils/: train_utils.py  trainer.py  trainer_epoch_based.py  trainer_step.py
src/attention_utils/: multihead_attention.py  scaled_dot_product_attention.py
src/data_utils/: tokenizer_utils.py
src/decoder_only_transformer/: decoder.py  model.py
src/encoder_decoder_transformer/: decoder.py  encoder.py  model.py
src/gpt/: decoder.py  generate.py  model.py
src/gpt_with_kv_caching/: decoder.py  generate.py  model.py
src/transformer/: model.py
src/utils/: positional_encoder.py  utils.py
study/: schedulers.ipynb
