[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "mlflow>=3.0",
    "numpy>=2.4.4",
    "psutil>=5.9",
    "pandas>=2.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
